--- a/src/setops/psi/CMakeLists.txt
+++ b/src/setops/psi/CMakeLists.txt
@@ -15,12 +15,14 @@
 # Source files in this directory
 set(SETOPS_SOURCE_FILES ${SETOPS_SOURCE_FILES}
     ${CMAKE_CURRENT_LIST_DIR}/ecdh_psi.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/kkrt_psi.cpp
 )
 
 # Add header files for installation
 install(
     FILES
         ${CMAKE_CURRENT_LIST_DIR}/ecdh_psi.h
+        ${CMAKE_CURRENT_LIST_DIR}/kkrt_psi.h
         ${CMAKE_CURRENT_LIST_DIR}/psi.h
     DESTINATION
         ${SETOPS_INCLUDES_INSTALL_DIR}/setops/psi
