--- a/.gitignore
+++ b/.gitignore
@@ -574,6 +574,9 @@ paket-files/
 __pycache__/
 *.pyc
 
+# pycharm
+.idea
+
 # Cake - Uncomment if you are using it
 # tools/**
 # !tools/packages.config
